src/test/ui/unboxed-closures/unboxed-closures-type-mismatch.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/unboxed-closures-type-mismatch.rs:5:13
   |
LL |     let z = f(1_usize, 2);
   |             ^^-------^^^^
   |               |
   |               expected `isize`, found `usize`
   |
help: provide an argument of the correct type
   |
LL |     let z = ({isize}, 2);
   |             ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
